# bazel_rules_nodejs_contrib

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  bazel-bazel_rules_nodejs_contrib  bazel-bin  bazel-genfiles  bazel-out  bazel-testlogs  defs.bzl
examples/babel_library/: BUILD.bazel  es6.js  package.json
examples/dev_bundle/: BUILD.bazel  index.js  mycomponent.vue
examples/jest_node_test/: BUILD.bazel  component.test.js  component.vue  config.js  deps.bzl  jest.bzl  package.json
examples/json/: BUILD.bazel  test.json
examples/loose-toml/: BUILD.bazel  another_config.toml
examples/loose_toml/: BUILD.bazel  config.toml
examples/multiple_json/: BUILD.bazel  test2.json  test3.json  test4.json
examples/nodejs_jest_test/: BUILD.bazel  component.test.js  component.vue  deps.bzl  jest.bzl  package.json  sum.test.js
examples/toml/: BUILD.bazel
examples/vue/: BUILD.bazel  config.js  mycomponent.vue
experimental/dev_bundle/: BUILD.bazel  defs.bzl
experimental/devserver/: BUILD.bazel  main.go  server.go
experimental/eslint/: .eslintrc.js  BUILD.bazel  defs.bzl  package.json
experimental/js_devserver/: defs.bzl
experimental/nuxt_build/: BUILD.bazel  defs.bzl  package.json
gazelle/: BUILD.bazel  config.go  fileinfo.go  fileinfo_test.go  flags.go  gazellebinary_test.go  js.go  resolver.go  resolver_test.go
internal/: BUILD.bazel  node_contrib_repositories.bzl
internal/babel_library/: BUILD.bazel  babel.rc.js  defs.bzl  package.json
internal/jest_node_test/: defs.bzl
internal/js_import/: defs.bzl
internal/js_library/: defs.bzl
internal/json_to_js/: BUILD.bazel  defs.bzl  package.json  parser.js
internal/nodejs_jest_test/: BUILD.bazel  defs.bzl  jest-runner.js  node.bzl  test_sources_aspect.bzl
internal/toml_to_js/: BUILD.bazel  defs.bzl  package.json  parser.js
internal/vue_component/: BUILD.bazel  defs.bzl  package.json  rollup.config.js
