load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle_binary")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "fileinfo.go",
        "flags.go",
        "js.go",
        "resolver.go",
    ],
    importpath = "github.com/ecosia/bazel_rules_nodejs_contrib/gazelle",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "fileinfo_test.go",
        "gazellebinary_test.go",
        "resolver_test.go",
    ],
    args = ["-gazelle=$(location :gazelle_js)"],
    data = [":gazelle_js"],
    embed = [":go_default_library"],
    importpath = "github.com/ecosia/bazel_rules_nodejs_contrib/gazelle",
    rundir = ".",
    deps = [
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//testtools:go_default_library",
    ],
)

gazelle_binary(
    name = "gazelle_js",
    # keep
    languages = [
        "@ecosia_bazel_rules_nodejs_contrib//gazelle:go_default_library",
    ],
)
