#  Copyright 2018 Ecosia GmbH
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

nodejs_binary(
    name = "nuxt",
    entry_point = "nuxt/bin/nuxt",
    data = [
        "@nuxt_build//:nuxt",
        "@nuxt_build//:vue",
        "@nuxt_build//:vue-meta",
        "@nuxt_build//:vue-router",
        "@nuxt_build//:vue-style-loader",
        "@nuxt_build//:sass-loader",
        "@nuxt_build//:node-sass",
        "@nuxt_build//:babel-loader",
    ],
    install_source_map_support = False,
)
