#  Copyright 2018 Ecosia GmbH
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

exports_files(["rollup.config.js"])

nodejs_binary(
    name = "rollup_vue",
    entry_point = "rollup/bin/rollup",
    data = [
        "@vue_component_deps//:rollup",
        "@vue_component_deps//:rollup-plugin-vue",
        "@vue_component_deps//:vue-template-compiler",
    ],
    install_source_map_support = False,
)
